# target-sap

./: .gitignore  README.md  config.json  input_fields.json  mapping_config.json  sample_config.json  setup.cfg
src/target_sap/: __init__.py  client.py  const.py  exceptions.py  mapping_config.json
src/target_sap_sftp/: __init__.py  client.py  const.py
